// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modal resolver component checks * component styled with mappings 1`] = `
<View
  style={
    Object {
      "height": 0,
      "position": "absolute",
      "width": 0,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    pointerEvents="box-none"
    style={
      Object {
        "alignSelf": "flex-start",
      }
    }
    visible={true}
  >
    <Text
      onCloseModal={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      Test
    </Text>
  </View>
</View>
`;

exports[`@modal resolver component checks * modal resolver closes on passed prop 1`] = `
<TouchableOpacity
  activeOpacity={1}
  onPress={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    identifier="modal-test-identifier-1"
    onCloseModal={[MockFunction]}
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    pointerEvents="box-none"
    style={
      Object {
        "alignSelf": "flex-start",
      }
    }
    visible={true}
  >
    <View
      onCloseModal={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <Text>
        Test1
      </Text>
      <Button
        onPress={[MockFunction]}
        title="Close Modal"
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`@modal resolver component checks * modal resolver closes on passed prop 2`] = `
<TouchableOpacity
  activeOpacity={1}
  onPress={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    identifier="modal-test-identifier-1"
    onCloseModal={
      [MockFunction] {
        "calls": Array [
          Array [
            undefined,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    pointerEvents="box-none"
    style={
      Object {
        "alignSelf": "flex-start",
      }
    }
    visible={true}
  >
    <View
      onCloseModal={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <Text>
        Test1
      </Text>
      <Button
        onPress={
          [MockFunction] {
            "calls": Array [
              Array [
                undefined,
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        title="Close Modal"
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`@modal resolver component checks * modal resolver component close on backDrop checks 1`] = `
<TouchableOpacity
  activeOpacity={1}
  onPress={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    identifier="modal-test-identifier-1"
    onCloseModal={[MockFunction]}
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    pointerEvents="box-none"
    style={
      Object {
        "alignSelf": "flex-start",
      }
    }
    visible={true}
  >
    <View
      onCloseModal={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <Text>
        Test1
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`@modal resolver component checks * modal resolver component close on backDrop checks 2`] = `
<TouchableOpacity
  activeOpacity={1}
  onPress={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    identifier="modal-test-identifier-1"
    onCloseModal={
      [MockFunction] {
        "calls": Array [
          Array [
            "modal-test-identifier-1",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    pointerEvents="box-none"
    style={
      Object {
        "alignSelf": "flex-start",
      }
    }
    visible={true}
  >
    <View
      onCloseModal={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <Text>
        Test1
      </Text>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`@modal resolver component checks * modal resolver component renders properly 1`] = `
<View
  style={
    Object {
      "height": 0,
      "position": "absolute",
      "width": 0,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <View
    identifier="modal-test-identifier-1"
    onCloseModal={[Function]}
    onResponderRelease={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    pointerEvents="box-none"
    style={
      Object {
        "alignSelf": "flex-start",
      }
    }
    visible={true}
  >
    <View
      onCloseModal={[Function]}
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <Text>
        Test1
      </Text>
    </View>
  </View>
</View>
`;

exports[`@modal resolver component checks * modal resolver component renders properly 2`] = `null`;
